recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return 0
         ^Spiral:9: warning: enclosing method spiral has result type Unit: return value discarded
  return 0
  ^Spiral:3: error: forward reference extends over definition of variable steps
  avance(length)
         ^Spiral:3: error: forward reference extends over definition of variable length
  avance(length)
         ^